components/cards/Tribute/tribute.module.scss
.tribute {
  width: 100%;
  padding: 1.2rem;
  min-width: 20rem;
  min-height: 13rem;
  text-align: start;
  border-radius: calc(5px + 0.8rem);
  background-color: var(--background-color-secondary);

  gap: 0.8rem;
  display: flex;
  flex-flow: column nowrap;
  align-items: flex-start;
  justify-content: flex-start;

  img {
    margin: 0;
    width: 100%;
    height: auto;
    border: 1px solid var(--border-color-light);
    display: block;
    overflow: hidden;
    border-radius: 50%;
  }

  .tribute-image {
    min-height: 12rem;
    max-height: 25rem;
    object-fit: cover;
    overflow: hidden;
    border-radius: 10px;
    object-position: center center;
  }

  .title {
    font-size: 1.2rem;
    overflow: hidden;
    line-clamp: 3;
    white-space: normal;
    text-overflow: ellipsis;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    display: -webkit-box !important;
  }

  .message {
    font-size: 0.92rem;
    font-weight: 400;
    margin-bottom: 1rem;
  }

  .message-profile {
    gap: 0.8rem;
    display: flex;
    margin-top: auto;
    align-items: center;
    justify-content: flex-start;

    .display-image {
      width: 2.5rem;
      height: 2.5rem;
      min-width: 2.5rem;
      max-height: 2.5rem;
      border-radius: 50%;
      object-fit: cover;
      object-position: center center;
    }

    > div {
      width: 100%;
      overflow: hidden;

      .name {
        display: flex;
        align-items: flex-end;
        justify-content: flex-start;

        max-width: 100%;
        font-size: 0.9rem;
        font-weight: 800;
        white-space: nowrap;
        margin-bottom: 0.2rem;

        .text {
          overflow: hidden;
          max-width: max-content;
          white-space: nowrap;
          text-overflow: ellipsis;
        }

        .time {
          color: var(--text-color-grey);
          font-size: 0.75rem;
          max-width: max-content;
          font-weight: 500;
          margin-left: 0.4rem;
          white-space: nowrap;
          text-transform: lowercase;
        }
      }

      .relationship {
        font-size: 0.85rem;
      }
    }
  }
}

